Update labeler, editorconfig, and gitignore

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,5 @@ binary_next_line   = true  # like -bn
 switch_case_indent = true  # like -ci
 space_redirects    = true  # like -sr
 keep_padding       = true  # like -kp
+[*.go]
+indent_style = tab
