--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,7 @@ repos:
       - id: go-cyclo
         args: [-over=15]
       - id: golangci-lint
+        args: [--timeout=5m]
       - id: go-critic
       - id: go-build
       - id: go-mod-tidy
