--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
     rev: v2.2.6
     hooks:
       - id: codespell
-        entry: codespell -q 3 -f --skip=".git,.github,go.*,magefiles/go.*" README.md
+        entry: codespell -q 3 -f --skip=".git,.github,go.*" README.md
 
   - repo: https://github.com/dnephin/pre-commit-golang
     rev: v0.5.1
