--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${workspaceFolder}/magefiles/mage_output_file.go",
+      "program": "${workspaceFolder}/mage_output_file.go",
       "args": ["testLoggerOutput"],
       // Pass magefile as a separate argument,
       // VSCode doesn't allow more than one file in "program".
