--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,7 +14,7 @@ jobs:
     name: Run tests and determine code coverage %
     runs-on: ubuntu-latest
     steps:
-      - name: Set up git repository
+      - name: Clone git repository
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       - name: Set up Go
@@ -25,10 +25,10 @@ jobs:
       - name: Install goreleaser (required for tests)
         run: go install github.com/goreleaser/goreleaser@latest
 
-      - name: Set git config
+      - name: Setup git config
         run: |
-          git config --global user.name "John Doe"
-          git config --global user.email johndoe@example.com
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
 
       - name: Set up Python
         uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5
