--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,36 +9,44 @@
     ":enablePreCommit",
     ":automergeDigest",
     ":automergeBranch",
-    "helpers:pinGitHubActionDigests"
+    "github>l50/goutils//.github/renovate/autoMerge.json5",
+    "helpers:pinGitHubActionDigests",
   ],
   dependencyDashboardTitle: "Renovate Dashboard 🤖",
   suppressNotifications: ["prIgnoreNotification"],
   rebaseWhen: "conflicted",
   commitBodyTable: true,
   "pre-commit": {
-    enabled: true
+    enabled: true,
   },
   packageRules: [
     {
       matchManagers: ["gomod"],
       matchPackagePatterns: ["*"],
-      enabled: true
+      enabled: true,
     },
     {
-      description: "Auto merge GitHub Actions",
-      matchManagers: ["github-actions"],
+      description: "Auto merge all updates if tests pass",
+      matchPackagePatterns: ["*"],
+      matchManagers: ["github-actions", "gomod"],
       automerge: true,
-      automergeType: "pr"
-    }
+      automergeStrategy: "squash",
+      requiredStatusChecks: ["tests", "pre-commit"],
+    },
   ],
+  lockFileMaintenance: {
+    enabled: true,
+    automerge: true,
+  },
   customManagers: [
     {
       customType: "regex",
       fileMatch: [".sh$"],
       matchStrings: [
-        "go install (?<depName>[^@]+?)@(?<currentValue>[0-9.-a-zA-Z]+)"
+        "go install (?<depName>[^@]+?)@(?<currentValue>[0-9.-a-zA-Z]+)",
       ],
-      datasourceTemplate: "go"
-    }
-  ]
+      datasourceTemplate: "go",
+    },
+  ],
+  platformAutomerge: true,
 }
