Updated pre-commit action so that it doesn't run twice for pull requests

--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,15 +1,21 @@
 ---
 name: Pre-Commit
 on:
-  push:
   pull_request:
+    branches:
+      - main
     types:
       - opened
       - synchronize
-  # Run once a week (see https://crontab.guru)
+      - reopened
+  push:
+    branches:
+      - main
   schedule:
+    # Run once a week (see https://crontab.guru)
     - cron: "0 0 * * 0"
   workflow_dispatch:
+
 jobs:
   pre-commit:
     name: Update pre-commit hooks and run pre-commit
