--- a/.github/workflows/nancy.yaml
+++ b/.github/workflows/nancy.yaml
@@ -16,6 +16,9 @@ on:
     - cron: "0 0 * * 0"
   workflow_dispatch:
 
+env:
+  GO_VERSION: 1.24.0
+
 jobs:
   nancy:
     name: Run nancy to identify 3p go vulnerabilities
@@ -27,7 +30,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32 # v5
         with:
-          go-version: '1.23'
+          go-version: "${{ env.GO_VERSION }}"
 
       - name: Ensure dependencies are up to date
         run: go mod tidy
