--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -16,6 +16,10 @@ on:
     - cron: "0 0 * * 0"
   workflow_dispatch:
 
+env:
+  GO_VERSION: 1.24.0
+  PYTHON_VERSION: 3.12.6
+
 jobs:
   pre-commit:
     name: Update pre-commit hooks and run pre-commit
@@ -27,12 +31,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5
         with:
-          python-version: "3.x"
+          python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Set up Go
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5
         with:
-          go-version: '1.23'
+          go-version: "${{ env.GO_VERSION }}"
 
       - name: Install go module dependencies
         run: |
