--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,6 +6,8 @@ on:
     branches: [main]
 
 env:
+  GO_VERSION: 1.24.0
+  PYTHON_VERSION: 3.12.6
   # Skip keeper tests
   SKIP_KEEPER_TESTS: true
 
@@ -20,7 +22,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5
         with:
-          go-version: '1.23'
+          go-version: "${{ env.GO_VERSION }}"
 
       - name: Install goreleaser (required for tests)
         run: go install github.com/goreleaser/goreleaser@latest
@@ -33,7 +35,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5
         with:
-          python-version: "3.x"
+          python-version: "${{ env.PYTHON_VERSION }}"
 
       - name: Install python dependencies (required for tests)
         run: python3 -m pip install ansible keepercommander pre-commit
