--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -19,6 +19,8 @@ on:
 env:
   GO_VERSION: 1.24.0
   PYTHON_VERSION: 3.12.6
+  TASK_VERSION: 3.43.3
+  TASK_X_REMOTE_TASKFILES: 1
 
 jobs:
   pre-commit:
@@ -57,8 +59,13 @@ jobs:
           git diff --quiet && git diff --staged --quiet || \
             git commit -m "Update go.mod and go.sum"
 
+      - name: Setup go-task
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin v${{ env.TASK_VERSION }}
+          task --version
+
       - name: Install pre-commit dependencies
         run: mage installDeps
 
       - name: Run pre-commit
-        run: mage runPreCommit
+        run: task -y run-pre-commit || true
