feat: Update markdownlint config and pre-commit setup for markdown linting
**Added:**

- Enabled `markdownlint` pre-commit hook for both `pre-commit` and `manual`
  stages in `.pre-commit-config.yaml`.

**Changed:**

- Disabled `MD037` (no emphasis as a heading) rule in
  `.hooks/linters/markdownlint.json` to fix battle with docgen.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,6 +53,7 @@ repos:
     hooks:
       - id: markdownlint
         args: ['--fix', '--config', '.hooks/linters/markdownlint.json']
+        stages: [pre-commit, manual]
 
   - repo: local
     hooks:
